@@ -4,7 +4,8 @@ import { Rect, Canvas, Text, Container } from '@bucky24/react-canvas';
 import { getFileList, loadFile, Types } from 'system';
 
 import { loadExistingMap, loadSavedCampaign } from '../../common/utils/loader';
-import Button from '../../common/Button';
+import TitleImage from '../Menus/TitleImage';
+import VerticalMenu from '../../common/Inputs/VerticalMenu'
 
 import { Panes, setUIPane } from '../store/ducks/ui';
 import { setMap, setActiveCharacter, setMapMeta } from '../store/ducks/map';
@@ -18,7 +19,7 @@ class LoadGameSelect extends Component {
 		this.state = {
 			mapGames: [],
 			campaignGames: [],
-			tab: 'campaigns'
+			tab: null,
 		};
 	}
 	
@@ -38,90 +39,89 @@ class LoadGameSelect extends Component {
 
 	render() {
 		const { width, height, setPane } = this.props;
+
+		let buttons = [
+			{ text: "Single Maps", id: "maps" },
+			{ text: "Campaigns", id: "campaigns" },
+			{ text: "Back", id: "back" },
+		];
+
+		if (this.state.tab === "maps") {
+			buttons = [];
+			this.state.mapGames.forEach((mapName) => {
+				buttons.push({ text: mapName, id: mapName });
+			})
+			buttons.push({ text: "Back", id: "back" });
+		} else if (this.state.tab === "campaigns") {
+			buttons = [];
+			this.state.campaignGames.forEach((mapName) => {
+				buttons.push({ text: mapName, id: mapName });
+			})
+			buttons.push({ text: "Back", id: "back" });
+		}
+
+		const midX = width/2 - 50;
+		const bottomBuffer = 60;
+		const buttonHeight = 30;
+		const padding = 10;
+		const startY = height - bottomBuffer - (buttonHeight+padding) * buttons.length;
+
 		return (<Canvas
 			width={width}
 			height={height}
 		>
-			<Button
-				x={0}
-				y={height-50}
-				width={200}
-				height={50}
-				text="Back"
-				onClick={() => {
-					setPane(Panes.SAVE_LOAD);
-				}}
-			/>
-			<Button
-				x={0}
-				y={0}
-				width={200}
-				height={50}
-				text="Campaigns"
-				toggle={this.state.tab === 'campaigns'}
-				onClick={() => {
-					this.setState({
-						tab: 'campaigns'
-					});
-				}}
-			/>
-			<Button
-				x={210}
-				y={0}
-				width={200}
-				height={50}
-				text="Maps"
-				toggle={this.state.tab === 'maps'}
-				onClick={() => {
-					this.setState({
-						tab: 'maps'
-					});
-				}}
-			/>
-			{ this.state.tab === 'maps' && <Container>
-				<Text x={0} y={62}>
-					Single Map Saves
-				</Text>
-				{ this.state.mapGames.map((mapName, index) => {
-					return <Button
-						key={`base_${index}`}
-						x={0}
-						y={50*index + 65}
-						width={200}
-						height={50}
-						text={mapName}
-						onClick={async () => {
-							await loadExistingMap(mapName, this.props.enemyData, this.props.characterData, this.props.setMap, this.props.setActiveCharacter, this.props.setMapMeta);
-							this.props.setPane(Panes.GAME);
-						}}
-					/>;
-				})}
-			</Container> }
-			{ this.state.tab === 'campaigns' && <Container>
-				<Text x={0} y={62}>
-					Saved Campaigns
-				</Text>
-				{ this.state.campaignGames.map((campName, index) => {
-					return <Button
-						key={`base_${index}`}
-						x={0}
-						y={50*index + 65}
-						width={200}
-						height={50}
-						text={campName}
-						onClick={async () => {
+			<TitleImage width={width} height={height} />
+			<VerticalMenu
+				buttons={buttons}
+				midX={midX}
+				startY={startY}
+				padding={padding}
+				height={buttonHeight}
+				width={100}
+				onSelect={async (id) => {
+					if (this.state.tab === null) {
+						switch(id) {
+						case "maps":
+						case "campaigns":
+							this.setState({ tab: id });
+							break;
+						case "back":
+							setPane(Panes.SAVE_LOAD);
+							break;
+						}
+					} else if (this.state.tab === "maps") {
+						if (!id) {
+							return;
+						}
+						if (id === "back") {
+							this.setState({ tab: null });
+						} else {
+							try {
+								await loadExistingMap(id, this.props.enemyData, this.props.characterData, this.props.setMap, this.props.setActiveCharacter, this.props.setMapMeta);
+								this.props.setPane(Panes.GAME);
+							} catch (e) {
+								console.error(e);
+							}
+						}
+					} else if (this.state.tab === "campaigns") {
+						if (!id) {
+							return;
+						}
+						if (id === "back") {
+							this.setState({ tab: null });
+						} else {
 							await loadSavedCampaign(
-								campName,
+								id,
 								this.props.setActiveCampaign,
 								this.props.setMaps,
 								this.props.setCurrentMap,
 								this.props.setIsCustom,
 							);
 							this.props.setPane(Panes.CAMPAIGN);
-						}}
-					/>;
-				})}
-			</Container> }
+						}
+					}
+				}}
+			/>
 		</Canvas>);
 	}
 };
