@@ -45,3 +45,4 @@ v0.6.0
 * Better enemy AI - basic pathfinding, real damage, action points
 * Additional dungeon tiles
 * Add trigger to spawn characters
+* Better menus for load and saving
